--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,7 @@
     </div>
     </div>
 
-<%= link_to "+新規", new_book_path, class: "btn btn-success" %>
+<%#= link_to "+新規", new_book_path, class: "btn btn-success" %>
 <table class="table table-striped">
  <tr>
   <th>年月</th>
