--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<h1>家計簿アプリ</h1>
-<% if user_signed_in? && current_user == @books %>
 <div class = "card">
  <div class = "card-body">
   <%= form_with method: "get", local: true do |f|%>
@@ -27,25 +25,21 @@
   <th>金額</th>
   <th>リンク</th>
  </tr>
- 
  <% sum = 0 %>
  <% num = 0 %>
- 
  <% @books.each do |book| %>
- 
  <tr>
-
+<% if user_signed_in? && current_user == book.user %>
   <td><%= book.year %>年<%= book.month %>月</td>
   <td><%= book.inout %></td>
   <td><%= book.category %></td>
   <td><%= book.amount %>万円</td>
-  
   <td>
   <%= link_to "詳細", book_path(book),class:"btn btn-info" %>
-  <% if user_signed_in? && current_user.id == book.user_id %>
+  
   <%= link_to "編集", edit_book_path(book),class:"btn btn-warning" %>
   <%= link_to "削除", book_path(book),method:"delete",data: { confirm: '本当に削除しますか？'}, class:"btn btn-danger" %>
-  <% end %>
+  
   </td>
  </tr>
   <% if book.inout == "収入" %>
@@ -53,6 +47,7 @@
   <% else %>
    <% num += book.amount %>
   <% end %>
+ <% end %>
  <% end %>
  <tr>
   <td></td>
@@ -76,4 +71,4 @@
   <td></td>
  </tr>
  </table>
-  <% end %>
+ </div>
