--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,19 @@
 
   <body>
 
-  <% if user_signed_in? %>
+  <% if user_signed_in?  %>
   <nav class="navbar navbar-light bg-light"> 
  <%=  "家計簿アプリ" %>
-           <span><%=  "#{current_user.nickname}の家計簿"  %>
+           <span><%= link_to "#{current_user.nickname}の家計簿",user_path(current_user) %>
                 <%#= link_to "マイページ", "/users/#{current_user.id}" %>
+                
                 <%= link_to "ログアウト", destroy_user_session_path, method: :delete,class: "btn btn-light" %>
              </nav> 
           </span>
             <%#= link_to "投稿する", new_book_path, class: "btn btn-success" %>
           
         <% else %>
+        <%=  "家計簿アプリ" %>
           <div class="grid-6">
             <%= link_to "ログイン", new_user_session_path, class: "btn btn-light" %>
             <%= link_to "新規登録", new_user_registration_path, class: "btn btn-light" %>
