--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,17 +3,17 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
-        <%= f.label :ニックネーム %> <em>(6 characters maximum)</em><br />
+        <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
         <%= f.text_field :nickname, autofocus: true, maxlength: "6" ,class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :メールアドレス %><br />
+        <%= f.label :email %><br />
         <%= f.email_field :email ,class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :パスワード %>
+        <%= f.label :password %>
         <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
@@ -21,7 +21,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :パスワード確認用 %><br />
+        <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" ,class: "form-control" %>
       </div>
 
