編集詳細の遷移先変更

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -26,6 +26,6 @@
  <label>金額</label>
   <%= f.number_field :amount, class: "form-control" %>
 </div>
- <%= link_to "戻る", user_path(current_user),class:"btn btn-secondary" %>
+ <%= link_to "戻る", root_path,class:"btn btn-secondary" %>
  <%= f.submit type,class:"btn btn-primary" %>
  <% end %>
