--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,4 +17,4 @@
   <td><%= @book.amount %>万円</td>
 </tr>
  </table>
- <%= link_to "戻る", user_path(current_user), class: "btn btn-secondary" %>
+ <%= link_to "戻る", root_path, class: "btn btn-secondary" %>
